--- a/views/login/index.html
+++ b/views/login/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html5-->
+{% load static %}
 <html lang='en'>
 	<head>
 		<title>Login</title>
@@ -9,14 +10,16 @@
 		<div id="container">
 			<div id="container-welcome">Welcome<br>Back<br>User! </div>
 			<div id="container-login">
-				<form action="#login-url" method="POST">
+				<form action="{% url 'schedule:main' %}" method="POST">
+					{% csrf_token %}
 					<h3>Insert user data</h3>	
 					<label>Username:</label>
 					<input type="text" id="username" name="username" placeholder="..." />
 					<label>password:</label>
 					<input type="text" id="password" name="password" placeholder="..." />
 					<button>Login</button>
-					<p>Don't you have an account? click <a href="#">here</a> to create one.</p>
+					<p>Don't you have an account? click <a href="register">here</a> to create one.</p>
+					<p>{{msg}}</p>
 				</form>
 			</div>
 		</div>	
