--- a/views/login/style.css
+++ b/views/login/style.css
@@ -2,6 +2,10 @@
 	--dark-blue: #001941;
 }
 
+*{
+	font-size: 20px;
+}
+
 body{
 	background-color: #000;
 	background-image: url('images/wp2.jpg');
@@ -10,60 +14,54 @@ body{
 
 #container{
 	display: flex;
-	height: 100%;
+	height: 50%;
+	width: 50%;
+	margin: auto;
+	margin-top: 50px;
 	overflow: hidden;
+	border-radius: 50px;
 }
 
 #container-welcome{
 	flex-basis: 30%;
 	background-color: #001941;
 	color: #fff;
-	height: 100%;
-	font-size: 20em;
-	padding:200px;
+	font-size: 50px;
+	text-align: center;
 	opacity: .899;
+	padding: 50px;
 }
 
 #container-login{
 	display: flex;
 	flex-grow: 1;
 	justify-content: center;
-	padding-top: 200px;
-	height: 80%;
 }
 
 form{
 	display: flex;
+	padding: 20px;
 	flex-direction: column;
-	font-size: 5em;
 	background-color: #fff;
-	max-width: 40%;
-	min-width: 40%;
+	max-width: 100%;
+	min-width: 100%;
 	height: 100%;
-	padding: 50px 200px;
-	border-radius: 50px;
 	opacity: .8;
 }
 
 input{
 	opacity: 1;
-	font-size: 1em;
-	margin: 50px 0px;
-	padding: 20px 20px;
+	width: 90%;
+	padding: 5px 10px;
 }
 
 button{
-	font-size: 1em;
-	padding: 20px;
+	width: 90%;
+	padding: 5px 10px;
 	border-radius: 50px;
 	color: #fff;
 	background-color: #001941;
+	margin-top: 10px;
 }
 
-p{
-	font-size: .8em;
-}
 
-a{
-	
-}
