--- a/views/create/index.html
+++ b/views/create/index.html
@@ -1,19 +1,19 @@
 <!--DOCTYPE html5-->
-{% load 'static' %}
 <html lang='en'>
 	<head>
 		<title>Create</title>
-		<link rel='icon' href='{% static "create/img/create.ico" %}' />
-		<link rel='stylesheet' href='{% static "create/style.css" %}' />
+		<link rel='icon' href='images/create.ico' />
+		<link rel='stylesheet' href='style.css' />
 		<script src="https://kit.fontawesome.com/51e1fe77b6.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div id='container'>
 			<div id='container-form'>
-				<form action='#' method='post'>
+				<form action='#' method='post' id='form-activity'>
+					<!--
 					<h3>Create each activities for your week! (˶ᵔ ᵕ ᵔ˶)</h3>
 					<label>Type of activity:</label>
-					<select>
+					<select id='select-type'>
 						<option name='type' value='fixed' title='set a fixed time'>Fixed</option>
 						<option name='type' value='auto' title='the program will set the time'>Auto fill</option>
 					</select>	
@@ -46,94 +46,12 @@
 					<label>To:</label>
 					<input type='time' name='to' />
 					<button><i class="fa-solid fa-plus"></i></button>
+					-->
 				</form>
 			</div>
 			<div class='container-day'>
+				<!--
 				<h3>Monday</h3>
-				<div class='day-activity'>
-					<div class='activity-details'>
-						<p class='details-name'>Swimming</p>
-						<p class='details-category'><span></span>Sports</p>
-					</div>
-					<div class='activity-time'>
-						<p>10:00</p>
-						<p>12:00</p>
-					</div>
-					<button><i class="fa-solid fa-trash"></i></button>
-				</div>
-			</div>
-			<div class='container-day'>
-				<h3>Tuesday</h3>
-				<div class='day-activity'>
-					<div class='activity-details'>
-						<p class='details-name'>Swimming</p>
-						<p class='details-category'><span></span>Sports</p>
-					</div>
-					<div class='activity-time'>
-						<p>10:00</p>
-						<p>12:00</p>
-					</div>
-					<button><i class="fa-solid fa-trash"></i></button>
-				</div>
-			</div>
-			<div class='container-day'>
-				<h3>Wednesday</h3>
-				<div class='day-activity'>
-					<div class='activity-details'>
-						<p class='details-name'>Swimming</p>
-						<p class='details-category'><span></span>Sports</p>
-					</div>
-					<div class='activity-time'>
-						<p>10:00</p>
-						<p>12:00</p>
-					</div>
-					<button><i class="fa-solid fa-trash"></i></button>
-				</div>
-			</div>
-			<div class='container-day'>
-				<h3>Thrusday</h3>
-				<div class='day-activity'>
-					<div class='activity-details'>
-						<p class='details-name'>Swimming</p>
-						<p class='details-category'><span></span>Sports</p>
-					</div>
-					<div class='activity-time'>
-						<p>10:00</p>
-						<p>12:00</p>
-					</div>
-					<button><i class="fa-solid fa-trash"></i></button>
-				</div>
-			</div>
-			<div class='container-day'>
-				<h3>Friday</h3>
-				<div class='day-activity'>
-					<div class='activity-details'>
-						<p class='details-name'>Swimming</p>
-						<p class='details-category'><span></span>Sports</p>
-					</div>
-					<div class='activity-time'>
-						<p>10:00</p>
-						<p>12:00</p>
-					</div>
-					<button><i class="fa-solid fa-trash"></i></button>
-				</div>
-			</div>
-			<div class='container-day'>
-				<h3>Saturday</h3>
-				<div class='day-activity'>
-					<div class='activity-details'>
-						<p class='details-name'>Swimming</p>
-						<p class='details-category'><span></span>Sports</p>
-					</div>
-					<div class='activity-time'>
-						<p>10:00</p>
-						<p>12:00</p>
-					</div>
-					<button><i class="fa-solid fa-trash"></i></button>
-				</div>
-			</div>
-			<div class='container-day'>
-				<h3>Sunday</h3>
 				<div class='day-activity'>
 					<div class='activity-details'>
 						<p class='details-name'>Swimming</p>
@@ -149,7 +67,8 @@
 			<div id='container-submit'>
 				<button>Create new Schedule</button>
 			</div>
+				-->
 		</div>
-		<script src="{% static 'create/main.js' %}"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
