--- a/views/create/index.html
+++ b/views/create/index.html
@@ -9,66 +9,12 @@
 	<body>
 		<div id='container'>
 			<div id='container-form'>
-				<form action='#' method='post' id='form-activity'>
-					<!--
-					<h3>Create each activities for your week! (˶ᵔ ᵕ ᵔ˶)</h3>
-					<label>Type of activity:</label>
-					<select id='select-type'>
-						<option name='type' value='fixed' title='set a fixed time'>Fixed</option>
-						<option name='type' value='auto' title='the program will set the time'>Auto fill</option>
-					</select>	
-					<label>Category:</label>
-					<select>
-						<option name='category' value='sports'>Sports</option>
-						<option name='category' value='university'>University</option>
-						<option name='category' value='leasures'>Leasures</option>
-						<option name='category' value='study'>Study</option>
-						<option name='category' value='courses'>Courses</option>
-						<option name='category' value='friends'>Friends</option>
-						<option name='category' value='family'>Family</option>
-						<option name='category' value='home'>Home</option>
-						<option name='category' value='workout'>Workout</option>
-					</select>
-					<label>Day:</label>
-					<select>
-						<option name='day' value='monday'>Monday</option>
-						<option name='day' value='tuesday'>Tuesday</option>
-						<option name='day' value='wednseday'>Wednesday</option>
-						<option name='day' value='thrusday'>Thrusday</option>
-						<option name='day' value='friday'>Friday</option>
-						<option name='day' value='saturday'>Saturday</option>
-						<option name='day' value='sunday'>Sunday</option>
-					</select>
-					<label>Name:</label>
-					<input type='text' name='name' placeholder='rubiusomg'/>
-					<label>From:</label>
-					<input type='time' name='from' />
-					<label>To:</label>
-					<input type='time' name='to' />
-					<button><i class="fa-solid fa-plus"></i></button>
-					-->
+				<form class='form-activities' action='#' method='post' />
+					<!--Form for activities-->
 				</form>
 			</div>
-			<div class='container-day'>
-				<!--
-				<h3>Monday</h3>
-				<div class='day-activity'>
-					<div class='activity-details'>
-						<p class='details-name'>Swimming</p>
-						<p class='details-category'><span></span>Sports</p>
-					</div>
-					<div class='activity-time'>
-						<p>10:00</p>
-						<p>12:00</p>
-					</div>
-					<button><i class="fa-solid fa-trash"></i></button>
-				</div>
-			</div>
-			<div id='container-submit'>
-				<button>Create new Schedule</button>
-			</div>
-				-->
+				<!--activities fields -->
 		</div>
-		<script src="main.js"></script>
+		<script src="main.js" type='module'></script>
 	</body>
 </html>
