--- a/schedule/templates/login/index.html
+++ b/schedule/templates/login/index.html
@@ -18,7 +18,7 @@
 					<label>password:</label>
 					<input type="text" id="password" name="password" placeholder="..." />
 					<button>Login</button>
-					<p>Don't you have an account? click <a href="register">here</a> to create one.</p>
+					<p>Don't you have an account? click <a href="view_register">here</a> to create one.</p>
 					<p>{{msg}}</p>
 				</form>
 			</div>
