--- a/schedule/templates/register/index.html
+++ b/schedule/templates/register/index.html
@@ -18,7 +18,7 @@
 					<label>password:</label>
 					<input type="text" id="password" name="password" placeholder="..." />
 					<button>Register</button>
-					<p>Do you have an account? click <a href="login">here</a> to login.</p>
+					<p>Do you have an account? click <a href="view_login">here</a> to login.</p>
 				</form>
 			</div>
 		</div>	
