--- a/views/main/index.html
+++ b/views/main/index.html
@@ -35,57 +35,6 @@
 				</div>
 			</div>
 			<div id="container-table">
-				<table>
-					<tr>
-						<th>Weekday:</th>
-						<th>Weekday:</th>
-						<th>Weekday:</th>
-						<th>Weekday:</th>
-						<th>Weekday:</th>
-						<th>Weekday:</th>
-						<th>Weekday:</th>
-					</tr>
-					<tr>
-						<td>
-						<div id="next-activity">
-							<div id="next-activity-details">
-								<p>University</p>
-								<p>11:00pm - 12:45pm</p>
-								<p><span></span>University</p>
-							</div>
-							<div id="next-activity-buttons">
-								<button><i class="fa-solid fa-check"></i></button>
-								<button><i class="fa-solid fa-ban"></i></button>
-							</div>
-						</div>
-						</td>
-						<td>
-						<div id="next-activity">
-							<div id="next-activity-details">
-								<p>University</p>
-								<p>11:00pm - 12:45pm</p>
-								<p><span></span>University</p>
-							</div>
-							<div id="next-activity-buttons">
-								<button><i class="fa-solid fa-check"></i></button>
-								<button><i class="fa-solid fa-ban"></i></button>
-							</div>
-						</div>
-						</td>
-						<td>
-						<div id="next-activity">
-							<div id="next-activity-details">
-								<p>University</p>
-								<p>11:00pm - 12:45pm</p>
-								<p><span></span>University</p>
-							</div>
-							<div id="next-activity-buttons">
-								<button><i class="fa-solid fa-check"></i></button>
-								<button><i class="fa-solid fa-ban"></i></button>
-							</div>
-						</div>
-						</td>
-				</table>
 			</div>
 			<div id="container-options">
 				<h3>Settings</h3>
@@ -93,5 +42,6 @@
 				<button>Create new schedule</button>
 			</div>
 		</div>
+		<script src='main.js' type='module'></script>
 	</body>
 </html>
