--- a/views/main/style.css
+++ b/views/main/style.css
@@ -111,3 +111,48 @@ th{
 	color: #000;
 	background-color: #eee;
 }
+
+#container-table{
+	max-width: 100%;
+	display: grid;
+	grid-template-columns: repeat(7, 1fr);
+	padding: 10px;
+}
+
+.day-activity{
+	background-color: #eee;
+	width: 93%;
+	display: flex;
+	border: 1px solid var(--dark-blue);
+	padding: 0px 10px;
+	margin-bottom: 5px;
+	align-items: center;
+}
+
+
+.day-activity button{
+	background-color: #ccc;
+	padding: 10px;	
+}
+
+.day-activity button:hover{
+	background-color: var(--dark-blue);	
+	color: #fff;
+}
+
+.activity-details{
+	flex-basis: 50%;
+}
+
+.activity-time{
+	flex-basis: 50%;
+}
+
+.details-category span{
+	padding: 2px 5px;
+	height: 2px;
+	background-color: #439;
+	border-radius: 5px;
+	margin-right: 5px;
+}
+
