--- a/schedule/templates/main/index.html
+++ b/schedule/templates/main/index.html
@@ -11,7 +11,7 @@
 		<input type='hidden' value='{{activities}}' id='inp-data' />
 		<form action="{% url 'schedule:log_out' %}" method='POST'>
 			{% csrf_token %}
-			<input type='hidden' value={{user_id}} name='user_id' />
+			<input type='hidden' id='user-id' value={{user_id}} name='user_id' />
 			<button>Log out</button>
 		</form>
 		<div id="container">
