js to the trash bin

--- a/schedule/templates/create/index.html
+++ b/schedule/templates/create/index.html
@@ -17,7 +17,7 @@
 		</form>
 		<div id='container'>
 			<div id='container-form'>
-				<form class='form-activities' action='#' method='post' />
+				<form id='form-activities' action='#' method='post' />
 					<!--Form for activities-->
 				</form>
 			</div>
