--- a/views/main/index.html
+++ b/views/main/index.html
@@ -38,7 +38,9 @@
 			</div>
 			<div id="container-options">
 				<h3>Settings</h3>
-				<button>Edit schedule</button>
+				<form>
+					<button>Edit schedule</button>
+				</form>
 				<button>Create new schedule</button>
 			</div>
 		</div>
